results/SpecGenBench/2-shot/log-TransposeMatrix-2023_11_28_03_27_19.txt
public class TransposeMatrix {
 
       //@ requires matrix != null;
       //@ requires (\forall int[] row; row \in matrix; row != null && row.length == matrix[0].length);
       //@ ensures \result != null;
       //@ ensures \result.length == matrix[0].length;
       //@ ensures (\forall int[] row; row \in \result; row != null && row.length == matrix.length);
       //@ ensures (\forall int i; 0 <= i && i < matrix.length; (\forall int j; 0 <= j && j < matrix[0].length; \result[j][i] == matrix[i][j]));
       public int[][] transposeMat(int[][] matrix)
       {
          int m, n, p, q;
          m = matrix.length;
          n = matrix[0].length;
          int[][] transpose = new int[n][m];

          for (int c = 0; c < n; c++) {

              for (int d = 0; d < m; d++) {
                  transpose[c][d] = matrix[d][c];
              }

          }
          return transpose;
       }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:4: error: This backslash token is unknown: \in
       //@ requires (\forall int[] row; row \in matrix; row != null && row.length == matrix[0].length);
                                            ^
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:4: error: ')' expected
       //@ requires (\forall int[] row; row \in matrix; row != null && row.length == matrix[0].length);
                                                                                                      ^
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:7: error: This backslash token is unknown: \in
       //@ ensures (\forall int[] row; row \in \result; row != null && row.length == matrix.length);
                                           ^
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:7: error: ')' expected
       //@ ensures (\forall int[] row; row \in \result; row != null && row.length == matrix.length);
                                                                                                   ^
4 errors

